--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,88 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.12.0'
+        classpath 'io.spring.gradle:dependency-management-plugin:0.6.1.RELEASE'
+    }
+}
+
 group 'my.wf'
 version '1.0-SNAPSHOT'
-
 
 subprojects {
 
     apply plugin: 'java'
     apply plugin: 'idea'
+    apply plugin: 'com.github.ben-manes.versions'
+    apply plugin: "io.spring.dependency-management"
 
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
 
 
     repositories {
-        mavenCentral()
+        jcenter()
+    }
+
+    ext {
+        springVersion = '4.3.4.RELEASE'
+        springBootVersion = '1.4.2.RELEASE'
+        jacksonVersion = '2.8.5'
+    }
+
+    ext['spring.version'] = springVersion
+
+
+    dependencyManagement {
+        dependencies {
+
+            dependencySet(group: 'org.springframework.boot', version: springBootVersion) {
+                entry 'spring-boot-starter-test'
+                entry 'spring-boot-starter-data-jpa'
+                entry 'spring-boot-starter'
+                entry 'spring-boot-starter-web'
+                entry 'spring-boot-starter-hateoas'
+                entry 'spring-boot-starter-data-rest'
+                entry 'spring-boot-starter-security'
+                entry 'spring-boot-starter-tomcat'
+            }
+
+            dependencySet(group: 'com.fasterxml.jackson.core', version: jacksonVersion) {
+                entry 'jackson-core'
+                entry 'jackson-annotations'
+                entry 'jackson-databind'
+                entry 'jackson-annotations'
+
+            }
+            dependencySet(group: 'com.fasterxml.jackson.datatype', version: jacksonVersion) {
+                entry 'jackson-datatype-jdk8'
+                entry 'jackson-datatype-jsr310'
+            }
+            dependencySet(group: 'com.fasterxml.jackson.dataformat', version: jacksonVersion) {
+                entry 'jackson-dataformat-csv'
+                entry 'jackson-dataformat-cbor'
+            }
+
+            dependency group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
+            dependency group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
+
+            dependency group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+            dependency group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+            dependency group: 'junit', name: 'junit', version: '4.12'
+            dependency group: 'commons-io', name: 'commons-io', version: '2.5'
+        }
     }
 
     dependencies {
-        compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
-        compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
+        compile group: 'org.slf4j', name: 'slf4j-api'
+        compile group: 'ch.qos.logback', name: 'logback-classic'
 
-        testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
-        testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-        testCompile group: 'junit', name: 'junit', version: '4.12'
+        testCompile group: 'org.hamcrest', name: 'hamcrest-all'
+        testCompile group: 'org.mockito', name: 'mockito-all'
+        testCompile group: 'junit', name: 'junit'
     }
 
 
