--- a/spider/build.gradle
+++ b/spider/build.gradle
@@ -1,5 +1,21 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
+}
+
+apply plugin: 'org.springframework.boot'
+
+bootRepackage {
+    enabled = false
+}
+
+
 dependencies {
     compile project(":contract")
-    compile group: 'commons-io', name: 'commons-io', version: '2.5'
-    testCompile group: 'org.mock-server', name: 'mockserver-netty', version: '3.10.4'
+
+    compile group: 'commons-io', name: 'commons-io'
 }
